# DataSimulator

./: .gitignore  DataSimulator.sln
DataSimulator/: CMakeLists.txt  CameraSetting.cpp  CameraSetting.h  DataSimulator.aps  DataSimulator.cpp  DataSimulator.h  DataSimulator.rc  DataSimulator.vcxproj  DataSimulator.vcxproj.filters  DataSimulatorDlg.cpp  DataSimulatorDlg.cpp.bak  DataSimulatorDlg.h  DataSimulatorDlg.h.bak  DialogNetworkSetting.cpp  DialogNetworkSetting.cpp.bak  DialogNetworkSetting.h  ReadMe.txt  Session.h  VCameraMessageTrans.cpp  VCameraMessageTrans.h  classify.cpp  classify.h  communicator.cpp  communicator.cpp.bak  communicator.h  execute.cpp  execute.h  label.pb.h  licence.txt  main.cpp  resource.h  rw_ini.cpp  rw_ini.h  socket.cpp  socket.h  socket_exception.h  stdafx.cpp  stdafx.h
DataSimulator/res/: DataSimulator.rc2
